name:                HaskellTetris
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/maple-shaft/HaskellTetris#readme
license:             BSD3
license-file:        LICENSE
author:              Dustin Briscoe
maintainer:          alain_us@hotmail.com
copyright:           Copyright (c) 2017 Dustin Briscoe
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable HaskellTetris
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Block, Mino, Board, HGame, HConsole, Menu, Timer, GlossUtilities, WSClient
  default-language:    Haskell2010
  ghc-options:
     -O2 -threaded
  build-depends:       base >= 4.7 && < 5
                     , gloss
                     , time
                     , containers
                     , random
                     , bytestring
                     , template-haskell
                     , file-embed
                     , bmp
                     , JuicyPixels
                     , vector
                     , websockets
                     , text
                     , mtl
                     , network
                     , aeson